--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Zzc950128/telegram-robot#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "node-telegram-bot-api": "^0.30.0",
     "superagent": "^3.8.3",
     "telegram-node-bot": "^4.0.5"
   }
